# OmniGrievance

./: .gitignore  AGENTS.md  README.md  crash.txt  docker-compose.yml  logs.txt  package-lock.json
.agents/rules/: emergency-override.md  gov-accessibility.md  mandatory-proof.md  nextjs-strict-versioning.md  open-source-only.md  rbac-mandate.md
.agents/skills/ai-multimodal/: SKILL.md
.agents/skills/fastapi-async/: SKILL.md
.agents/workflows/: build-ai-agent-apis.md  build-omnichannel-intake.md  deploy-local-prototype.md  simulate-parallel-dispatch.md  verify-system-compilance.md
backend/: Dockerfile  pyproject.toml  requirements.txt  test_results.txt  test_results_cmd.txt  test_results_final.txt
backend/app/: database.py  main.py  models.py
backend/app/api/: auth.py  employee.py  grievances.py  ingestion.py  intake.py  webhook_intake.py
backend/app/core/: routing.py
backend/app/services/: ai_gateway.py  audio_processing.py  communications.py  nlp_processing.py  vision_processing.py
backend/omnigrievance_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_ai_services.py  test_whatsapp_ingestion.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tsc_output.txt  tsc_output_2.txt  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  sw.ts
frontend/components/: HeroSlider.tsx  main-nav.tsx
frontend/hooks/: useAuth.ts  useIndexedDB.ts  useOfflineStorage.ts
frontend/lib/: api-client.ts
frontend/public/: manifest.json
frontend/types/: jsx-shim.d.ts
(+29 files in other folders)
