[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omnigrievance-backend"
version = "0.1.0"
description = "The AI-native digital nervous system backend for OmniGrievance."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core API Framework
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "pydantic[email]==2.6.3",
    "python-dotenv==1.0.1",
   
    # Database & Spatial Routing (PostGIS)
    "sqlalchemy==2.0.27",
    "asyncpg==0.29.0",
    "geoalchemy2==0.14.4",
   
    # Caching
    "redis==5.0.1",
   
    # Security & Authentication
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
   
    # External API Communication
    "httpx==0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
    "black>=24.2.0"
]

# =========================
# Tool Configurations
# =========================

[tool.ruff]
# Ruff is a lightning-fast Rust-based linter that replaces flake8, isort, etc.
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"] # Enable standard errors, fatals, and import sorting

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"